data/derived/sp14/progs/unify/prog0352.ml.out
Characters 8-11:
  let _ = 5.4 * 4;;
          ^^^
Error: This expression has type float but an expression was expected of type
         int
